# ChangeLog for dev-perl/Net-Jabber
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Jabber/ChangeLog,v 1.27 2012/06/24 12:58:18 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Net-Jabber-2.0.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> Net-Jabber-2.0.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*Net-Jabber-2.0.0 (29 Aug 2011)

  29 Aug 2011; Torsten Veller <tove@gentoo.org> +Net-Jabber-2.0.0.ebuild:
  Change version scheme

  29 Sep 2010; Jeroen Roovers <jer@gentoo.org> Net-Jabber-2.0.ebuild:
  Stable for HPPA (bug #330519).

  04 Feb 2010; Torsten Veller <tove@gentoo.org> Net-Jabber-2.0.ebuild:
  Fix LICENSE (#301969). Maintenance

  22 Jan 2010; Jeroen Roovers <jer@gentoo.org> Net-Jabber-2.0.ebuild:
  Marked ~hppa (bug #295361).

  04 Dec 2007; Markus Rothe <corsair@gentoo.org> Net-Jabber-2.0.ebuild:
  Stable on ppc64; bug #198075

  11 Jun 2007; Brent Baude <ranger@gentoo.org> Net-Jabber-2.0.ebuild:
  Marking Net-Jabber-2.0.ebuild ~ppc64 for bug #181650

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Net-Jabber-2.0.ebuild:
  Ebuild maintenance

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Net-Jabber-2.0.ebuild:
  Adding perl dep; fixed DEPEND

  04 Jul 2006; Christian Hartmann <ian@gentoo.org> Net-Jabber-2.0.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed header

  03 Oct 2005; Aron Griffis <agriffis@gentoo.org> Net-Jabber-2.0.ebuild:
  Mark 2.0 stable on ia64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> Net-Jabber-2.0.ebuild:
  add ~ia64

  30 Jul 2005; Pieter Van den Abeele <pvdabeel@gentoo.org>
  Net-Jabber-2.0.ebuild:
  PowerPC Stable

  29 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  -Net-Jabber-1.30.ebuild:
  Cleaning for mirror

  22 Apr 2005; Simon Stelling <blubb@gentoo.org> Net-Jabber-2.0.ebuild: