@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Net-Jabber-2.0.tar.gz 112416 SHA256 dfba394a6166a5a5e35ce763f408f97788047cc39ce5acad802e281432c88011 SHA512 2ad275fdef8a7ed17dc464f692b974e71bc3a5df5239943cceaec9509e6454945023e220ddfb42763e18813124f6b7f2d6d43faf3059e0680b753486961a1b4c WHIRLPOOL 2934b371a1d36ab646cc656bc41f21fc1e22b152a4a38b06bb64e5b3f22888be264c03df2b34d36fc8b68731031806f71c9518821baeeed41d3db89db9a4a369
-EBUILD Net-Jabber-2.0.0.ebuild 506 SHA256 58c7abe928972601697821074f655bba0eb97b63519c59c885c704db21cd3c4e SHA512 10d3001a16fa9b9cb912afceca8e9fd0bfaddc3546a4ac1260b32a6c352989a7cdbb51122df55948365ecce8e807ae0ac4af5d260148568492f6a93ca031370f WHIRLPOOL ce8b4ff0b621b20fa70112763fa75520bf91a7eed2396a48ba32d8481b471205305eae96c886d7e6d6ac4c44a40ddb18f5e2ca2234144b04396779c14865072f
-MISC ChangeLog 2957 SHA256 f97d4c2306a6646bc7b535c46d755f1d74e6cd305ede40bde853db6dc2025025 SHA512 871428bcea1ea9cc26f2e1d7a781cdc4cc3de656449318d2ca1c18cc249b02f3b10c0e1d408a966ee430c185e58bff93b4ccb5de3424bad11e2c900daa3e89c2 WHIRLPOOL 7cb803c736657d13f2ef6b70780bd9ed58b4d75555bc32d8226783b6edfad64771524663d1316e01d0b4ed0d6718c947dbd50770b99dfc4e4dd58ab0fed85777
+EBUILD Net-Jabber-2.0.0.ebuild 515 SHA256 a666a2cf578292f27b1f14e0589b20ad79c47cfde598222889352d083e8bde6b SHA512 d502f7bb6110357f3e9144b3bacd1f20c7094859ef45c925ab957636086ab10b98301fd08f5a265a576c5f54b0a3453126f281215550d3d6d5890550e1966c87 WHIRLPOOL 4efb4b53ebb723587ff3b886a318aa11b557473de7fba0515aac5ca8c528318a7eb7344a4b87c8757d2de584688c07c1c4dc4a036cf633fee4bc0180726e3029
+MISC ChangeLog 3057 SHA256 a643b3e8f7666e133dad2f6728d05372c804da6a18bb00659cf75da5990d8b04 SHA512 86094abc0fcab7abf1c89bf8c3bd9a4a6fa85f9385bf3365c08a3fbdcb98ecb972ecf300667f9cd225037388c57541e5ee2e2b328b4a9f99c09fed43fc04e8cb WHIRLPOOL 05a3dccfa75aadbb6149abbdb04399aea80552ec8edffd2f01fe7c4b36c890574a9a986cd5836ba818bc90f51ff232c8fd1ea6b6f284d629a3df87426f63c116
 MISC metadata.xml 1497 SHA256 5d88209addb21b1b7f5926108bbc9e271ffde00955d0e71fc0e7d1a8b2f61152 SHA512 1dcb730e33a41b4682fc7dad5c3971b45b1047a378fdbcedeeb4d3a0066b94ca0afae6e16c3b9839b4ce066b4fc7f49378a0c0dae6814a1d5800550cc1addfb2 WHIRLPOOL 1b6907d4f82bb8d37e165beff3fda755eebfa8255aefebe92e0c77fb14c7b29326bccaea6965c5c5d4083a466564c3a3586e5cfde14957f6e96b45b0a4dfb77c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlBH/o8ACgkQl5yvQNBFVTWE/QCfUby0D59aFzhanRSbuKM3hURO
+Y6QAnRmXYQNRuM0+X8XV4mpocVDKpC84
+=lDwM
+-----END PGP SIGNATURE-----
