@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 1.02-defined.patch 553 SHA256 6b37f1bb3e4ab22e3253044322580054a5bcbe560c62ebc98febe51ccfc2c5c7 SHA512 a45eeb254e7b8507e43c4e38ecbb7c1ae570f2910b2fd2bebbeb498e47c6c4f8a1c08d26c5b36c2b9abb794c05798ef31d7a94a21bd0f74f3561e2fb65e5ac31 WHIRLPOOL 68e071d121a53fd2a932c62d4da82d7a6cbbb6aafc1d7b9d135ca0fca8819375f48ae2dacdf39a7c7a0577f13902367462d152cfcc30ac0e13f42db9401f5df8
 DIST Net-XMPP-1.02.tar.gz 121653 SHA256 69761441e214042b10b6608afaffbb1b5262e4aaaddb4b315dbf2ea48c4742ea SHA512 7a373e627de7e909ef50d6525b438dd7f094c7e6ad3cb66fff6087048fe9b127e376cf45d1621e55deec2c59fe043ff19f180d0b264fa1dd0c392701dfc43497 WHIRLPOOL e3238e9dac4caf00de645c9eadbc530b725a6872a89ee82043931b7d21a6375419554020dc573aeed3b4415f8a65ddc4685c497bfe1951dd5d802d4fb8557b70
-EBUILD Net-XMPP-1.20.0.ebuild 770 SHA256 f681f6465a95b4f70cf737db7880f4c37a58586bfef8b1811e6a87db77239e34 SHA512 82a3d7391c2925898a32860f677373e62f82f5228a789a372eefd5660c0b1ef8d2f817d14a34d991b2c9774a32a8421d91a81e75519401c477b38bd20a9dc54e WHIRLPOOL 79a679b471e3942c0bf73034ca72593352fc6d425ff3df24e129106112b7c56bc0c5244a5eaf84a3d33611b93a1b757901836831cce4be6132520569b20f17b7
-MISC ChangeLog 4264 SHA256 9fe47f93c219c0b2adf18743d7bcda3fc6c5b707df4e79c4132b1148f0e4a121 SHA512 a459671e5f6a2f5f14d833c024fe7b32871bc40f7d301e0455e0a2579bbc22061fa7d657ea77ea8767124909289b2e0545555bde994c111a0d4f3963b8bf5319 WHIRLPOOL 2cf5d20ca78f69749130851ab12ca5646b2aee4137aa6a4f8ca81d873c76e4608f24c485c6c66147f4dd91b65caf883f5b870af91b08f2fbb678fd3b6ad920d9
+EBUILD Net-XMPP-1.20.0.ebuild 776 SHA256 0ec6edd69b8ea0605560602e68ff29a784af54cff0b5faf5875148c3c03e0ae9 SHA512 160bbc9100e9ed15495ff0c75325e1632bf8d8734fe3ee6c4c3fa4c4fbb152984c0e4cdcf64fbf926d389831306b7e33f4f1f691ec815a1605e7057f6f30b332 WHIRLPOOL 851797b636ac394f6f808eaba1daabf0c0e00e6fa7fb0d8bf287977df462414050d8aeca21c38eb750c1d6960b6fa52a71ee540a49423ac720bcc958d5e98b7e
+MISC ChangeLog 4363 SHA256 8cc951ce6e5e14eb2ec18ddf0cc900915d1deaf278b38183e9ef8149ead51719 SHA512 810c6d0340b5eb254f68ae1ac843ae2d724e6c86ece6fc00664c40e3c2542e63b582f2ad334120066a8142e37cbd1b49e978e3d821e6a81c96fecb247e48eabb WHIRLPOOL d78c2e2b99623b959bced1eb48d6f3949600ac1e9d8508cd72851c27f7ee51ab8f12e38afd44f33e2c90ac5bbb5b59d578dda1d257504848e3eca775ba033704
 MISC metadata.xml 1207 SHA256 eccc54c768d8095d45677c3dec54e148836d9adbe2687af859b86b5445cd4950 SHA512 b354d06f6ef34fabcf52713f2d2fc3c28fa226a1f6f0c548c33c0ab26bd30022d69dfdedb44ff0297651fabf71c340fcc36b62226e0c5339c33b776741a66f06 WHIRLPOOL 094e510f85b2ff79d1e4106c182cda409233716df2cb29b2efe5eefdd02e2a22218205547aadf2aa6bf148659cec30d920ff8ac84119817dce54f3b2a6b51649
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlBH/lcACgkQl5yvQNBFVTWRDACgmdl+HnsobpSmoL7qAZ6OTPNr
+tjIAoJkjljJAfjui4OdxmnT4aa7+AMm/
+=RKXB
+-----END PGP SIGNATURE-----
