@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST XML-Stream-1.22.tar.gz 80529 SHA256 4aa05b5305dffc68386106044966d591b0bb2b604807eeb32f98d7b0ee30c698 SHA512 67dcfa07d46911bb8ad1aa75e749b3f8a0485031721ab60bc9865fbe3494517928f1e00335eab325bc495ba78aa557836bc4a4569b1e71c507fed342bb2e0114 WHIRLPOOL 674dc8457203436fe757ea33a27cbf29b5743b2d0ec22dbebbaaab715b6aa4235b370286a7cf49e6b2610ed73ed672e0f9b8ceda32268f856aaebb59e5a2a179
 DIST XML-Stream-1.23.tar.gz 85045 SHA256 fe0932ab19e3c522ca4e695a0129c9f4ae00eb52debdd672ba733cf8a4c816c1 SHA512 6aac16b2403dd6d87b6038b7bc820a760d057263226b692bd86802204faaead86d1d1b7bb5770fe018a3945508202524fecb11d6f376c6e01e8b029a72d12994 WHIRLPOOL 600ff8e6755c955b7edfc3bcb1c89ed1803f9f2539cef5a121a6b93c11e7ce5c2aeee662f5e24acabeba230b2f7e22343b3e7c979acdb14745514747a24e8c83
 EBUILD XML-Stream-1.22.ebuild 659 SHA256 b0449f04d4914cfe43e8ab12d198882da9d788262e2a1e795861711ebdf48bd2 SHA512 f6b9847d7a1e5cc46b5c1d1f25beade317e9799b3e97418ac0b0c37408fbc3ec0b7fbc90ef982d353c64172acc0787ea4919678739543d64a679862d844257fd WHIRLPOOL b79325372e5c196ff7608ee723cd0e57f0bca1dfffb46af431455c634ba52f2f58d31757f608e0ef88b6b7b8ba26f53bc29c9b15886095a9cf0dc21f4efc5383
-EBUILD XML-Stream-1.230.0.ebuild 618 SHA256 4dfed1156755e61d087d717ebd435afe153eac3a11fb51bbfb8dd2dfd77c9ba1 SHA512 408b55f3342f47246ba39683a373c936789199bd6e8169bd7ed913acee3f11019b47da3a084d461ac1518c4788ab935eb7b981ee1591b36b517a1d941f374233 WHIRLPOOL c72121b6186286a4bbcb7143cf600e79d7f8c01cff253e6292e45345e61fabfb4da903c6d1f2147c3fdef18cfc7995761af2246eff9ed57a2206739ee2f1cffa
-MISC ChangeLog 2979 SHA256 372d70f36ce393abaeca71bf25e6c6be8b8efeee2e4e71f6f00c8e86c1ca2f58 SHA512 30cabdee140b387fcfd80d4c79f9f6b25f421552ef9a10cd53d2cff56cb42156ca52624f76ee6c405f64f27f8913a9239e92a304428f662dcc7e7165a66552c0 WHIRLPOOL 593e0d5402ee3aa91045c242cb9fa1319d89b36485a07dc2571fd164da9ff22ad5fe0407fac15c313e665f3cbcc309150d1d221769f2e1589fe1fe59a7fa7ace
+EBUILD XML-Stream-1.230.0.ebuild 627 SHA256 995a0d690264909637e4396d31611e9493e863035dbcf23d3fab9fe6a5940126 SHA512 8fa13b0de239b3707d457d7cebc9d778625cbe739f1a7515277a25b591c5a725f5308006ea893b1715c40b863e1e402d6e757a2a3c40c4be4d5ee453843aa913 WHIRLPOOL f8636a62bb0bfd26af1d8cf0cdc20392c41c6a7abc4161014e60aa065ef2b2f0bae7c29515ea495409de136f0ffa623f70673030f98c63b5a7274811b00f4d90
+MISC ChangeLog 3083 SHA256 412485cf18040c063055caf51aaa2726ff5502899bc117e580e086245b049397 SHA512 00c41d45bf984842409d77f72d24545afc0335f1975cbecb1b0b6ee0370467305711ea800c6af77ae51dede1f34befbbbe53c22905e291cda80152e9243e2efd WHIRLPOOL 786d5215c363f30e9b3f800fc3264ff701f552737564ff4df8cf82e20be0abe5416623c94187b3d8455cca4f94ed50ba930bce550a92bdeafc5c33ed8f723c2b
 MISC metadata.xml 1730 SHA256 48def5f32b3c5d2c07e3c4d81f1855fd866cbaecf3d177478729cb190f1e4bc5 SHA512 5154cbba08708095407b34bdfbd544ff406b136c868220b263e98354fdd97a9ca38c20fc9dd9f5b5b4e3ab3aa29205012def83f91290f4cd0b629dceaee63074 WHIRLPOOL 2955ebdbacc39d6cc368b546d46ac1e99df5648a8f7bb68f74ef7112bc34ed6ec977cc01c1d110457fa54415d7b0ffdc560154dd3a1f78f0c8a853140017bb54
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlBH/SEACgkQl5yvQNBFVTXdywCeOyHApDq8wgO4uFtz187qG5ne
+IawAoIlPhDmzAtrgPfrfpFhLMtQ416w9
+=hxop
+-----END PGP SIGNATURE-----
