@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Net-XMPP
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-XMPP/ChangeLog,v 1.39 2012/06/24 12:59:41 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-XMPP/ChangeLog,v 1.40 2012/09/06 01:37:46 blueness Exp $
+
+  06 Sep 2012; Anthony G. Basile <blueness@gentoo.org> Net-XMPP-1.20.0.ebuild:
+  Keyword ~arm
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
