@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Net-Jabber
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Jabber/ChangeLog,v 1.27 2012/06/24 12:58:18 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Jabber/ChangeLog,v 1.28 2012/09/06 01:38:42 blueness Exp $
+
+  06 Sep 2012; Anthony G. Basile <blueness@gentoo.org> Net-Jabber-2.0.0.ebuild:
+  Keyword ~arm
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
